# montecarlo

./: .gitignore  CMakeLists.txt  README.md
include/: algorithm.h  montecarlo.h
src/: euler.c
